src/compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Shell/content/Views/Shared/_Alert.cshtml.pp
@if (TempData["Success"] != null)
{                
    <div class="alert alert-success">
        @TempData["Success"]
    </div>
}
@if (TempData["Error"] != null)
{                
    <div class="alert alert-danger">
        @TempData["Error"]
    </div>
}
@if (TempData["Information"] != null)
{                
    <div class="alert alert-info">
        @TempData["Information"]
    </div>
}